--- a/data/plugins/jqgrid/less/base/jqgrid.subgrid.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.subgrid.less
@@ -35,21 +35,20 @@
 /* loading */
 .ui-jqgrid .loading {
   position: absolute;
-  top: 45%;
-  left: 45%;
+  top: 50%;
+  left: 50%;
+  color: white;
   width: auto;
   z-index:101;
-  padding: 6px;
-  margin: 5px;
   text-align: center;
-  display: none;
-  border: 1px solid #ddd;  /*default*/
   font-size: 14px;
-  background-color: #d9edf7;
+  margin: -11px auto auto -35px;
 }
 .ui-jqgrid .jqgrid-overlay {
-  display:none;
   z-index:100;
+  background-color: #616161;
+  position: absolute;
+  cursor: wait;
 }
 /* IE * html .jqgrid-overlay {width: expression(this.parentNode.offsetWidth+'px');height: expression(this.parentNode.offsetHeight+'px');} */
 * .jqgrid-overlay iframe {
