Feature(layout): added less

--- a/data/plugins/jqgrid/less/base/jqgrid.utilities.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.utilities.less
@@ -42,3 +42,67 @@
   -moz-text-overflow:ellipsis;
   text-overflow:ellipsis;
 }
+
+/* jqGrid drop.js */
+.ui-jqgrid {
+  .btn-group {
+    margin: 0 5px;
+  }
+}
+
+div.drop-actions.drop-target-attached-top {
+  top: -7px;
+  &::before {
+    bottom: -13px;
+    color: white;
+    content: "\f0d7";
+    font: normal normal normal 24px FontAwesome;
+    position: absolute;
+    right: 10px;
+    text-shadow: 0px 1px 0px #999999, 0 0 0 #999999, 0px 0px 0px #999999;
+  }
+}
+
+div.drop-actions.drop-target-attached-bottom {
+  top: 7px;
+  &::before {
+    color: white;
+    content: "\f0d8";
+    font: normal normal normal 24px FontAwesome;
+    position: absolute;
+    right: 10px;
+    text-shadow: 0px -1px 0px #cccccc, 0 0 0 #cccccc, 0px -1px 0px #cccccc;
+    top: -14px;
+  }
+}
+
+div.drop-actions {
+  .dropdown-menu {
+    border: 0;
+    box-shadow: none;
+    display: block;
+    float: none;
+    max-width: 300px;
+    position: relative;
+    li {
+      .fa {
+        left: 10px;
+        position: absolute;
+        top: 5px;
+        width: 15px;
+      }
+      a {
+        padding-left: 35px;
+        position: relative;
+        white-space: normal;
+        &:hover {
+          background: #337ab7;
+          color: #ffffff;
+        }
+      }
+    }
+  }
+  .dropdown-menu > li > a {
+    white-space: normal;
+  }
+}
