Bug fix(Chosen): Border from bottom on autocomplete multiple not shown

--- a/data/plugins/chosen/less/jQuery.chosen-1.4.2.min.less
+++ b/data/plugins/chosen/less/jQuery.chosen-1.4.2.min.less
@@ -53,7 +53,7 @@
   .placeholder();
   .chosen-drop {
     position: absolute;
-    top: 100%;
+    top: 98%;
     left: -9999px;
     z-index: 5;
     width: 100%;
@@ -277,6 +277,8 @@
         padding: 0;
         border: none;
         color: @chosen-container-color;
+        background-color: @input-bg;
+        background-image: none;
         font-size: @chosen-container-font-size;
         line-height: @chosen-container-line-height;
         white-space: nowrap;
