Feature(Autocomplete): Make autocomplete work in jqGrid

--- a/data/plugins/jqgrid/less/base/jqgrid.base.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.base.less
@@ -7,7 +7,6 @@
 
 @jqgrid-sort-icons-width: 10px;
 
-
 /*Grid*/
 .ui-jqgrid {
   position: relative;
@@ -243,6 +242,9 @@ div.tablediv > .table-bordered {
   padding:0;
   overflow: auto;
   text-align:left;
+  &.reset-overflow {
+    overflow: initial;
+  }
 }
 .ui-jqgrid .ui-jqgrid-btable {
   table-layout: fixed;
