Improvement(Photon): Update sidebar menu with latest specifications

--- a/data/styles/base/bootstrap.less
+++ b/data/styles/base/bootstrap.less
@@ -52,6 +52,7 @@
 @import "responsive-embed.less";
 @import "wells.less";
 @import "close.less";
+@import "../../plugins/jquery-custom-scrollbar/less/jquery-custom-scrollbar-0.5.5.custom.less";
 
 // Components w/ JavaScript
 @import "modals.less";
