Feature(Layout): Refactor code

--- a/data/plugins/jqgrid/less/base/jqgrid.base.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.base.less
@@ -213,11 +213,11 @@
     border-right: 0px none !important;
     td, th {
       &, &.ui-th-ltr {
-        border-left: 0px none !important;
+        border-left: 0px none;
       }
     }
     tr.ui-jqgrid-labels th:first-child, tr.ui-search-toolbar th:first-child{
-      border-left: 1px solid @jqgrid-border-color !important;
+      border-left: 1px solid @jqgrid-border-color;
     }
     th {
       .ui-th-rtl {
