--- a/data/plugins/jqgrid/less/base/jqgrid.base.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.base.less
@@ -11,7 +11,7 @@
 /*Grid*/
 .ui-jqgrid {
   position: relative;
-  .box-shadow(inset 0px 0px 0px 1px darken(@jqgrid-border-color, 2%));
+  .box-shadow(0px 0px 0px 1px darken(@jqgrid-border-color, 2%));
   border-radius: @jqgrid-border-radius;
   .ui-jqgrid-view {
     position: relative;
@@ -70,11 +70,12 @@
   }
 
 
+
   ///* Header*/
   .ui-jqgrid-hdiv {
     background: @jqgrid-th-bg-color;
     position: relative;
-    margin: 0;
+    margin: 1px 0 0 0;
     padding: 0;
     overflow: hidden;
     .clearfix();
@@ -114,6 +115,16 @@
         }
       }
     }
+  }
+
+  .table-bordered td:last-child,
+  .table-bordered th:last-child {
+    border-right: 0
+  }
+
+  .table-bordered tr.ui-jqgrid-labels th:first-child,
+  .table-bordered tr.ui-search-toolbar th:first-child{
+    border-left: none;
   }
 }
 
@@ -213,11 +224,8 @@
     border-right: 0px none !important;
     td, th {
       &, &.ui-th-ltr {
-        border-left: 0px none;
+        border-left: 0px none !important;
       }
-    }
-    tr.ui-jqgrid-labels th:first-child, tr.ui-search-toolbar th:first-child{
-      border-left: 1px solid @jqgrid-border-color;
     }
     th {
       .ui-th-rtl {
@@ -247,16 +255,18 @@ div.tablediv > .table-bordered {
   padding:0;
   overflow: auto;
   text-align:left;
-  &.reset-overflow {
-    overflow: initial;
-  }
 }
 .ui-jqgrid .ui-jqgrid-btable {
   table-layout: fixed;
-  border-left:none ;
-  border-top:none;
+  border-left: none ;
+  border-top: none;
+  border-bottom: none;
   margin-bottom: 0px
 }
+.ui-jqgrid .ui-jqgrid-btable tr:last-child td{
+  border-bottom: none;
+}
+
 .ui-jqgrid tr.jqgrow {
   outline-style: none;
 }
