Feature(Color scheme): Update the color scheme using the new color codes

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -288,6 +288,55 @@
         color:@gray-dark;
       }
     }
+    .swatch-black {
+      background-color:@black;
+      &:before {
+        content: '@{black}';
+        color:@white;
+      }
+    }
+    .swatch-gray-76 {
+      background-color:@gray-76;
+      &:before {
+        content: '@{gray-76}';
+        color:@black;
+      }
+    }
+    .swatch-gray-80 {
+      background-color:@gray-80;
+      &:before {
+        content: '@{gray-80}';
+        color:@black;
+      }
+    }
+    .swatch-gray-87 {
+      background-color:@gray-87;
+      &:before {
+        content: '@{gray-87}';
+        color:@black;
+      }
+    }
+    .swatch-gray-93 {
+      background-color:@gray-93;
+      &:before {
+        content: '@{gray-93}';
+        color:@black;
+      }
+    }
+    .swatch-gray-96 {
+      background-color:@gray-96;
+      &:before {
+        content: '@{gray-96}';
+        color:@black;
+      }
+    }
+    .swatch-gray-98 {
+      background-color:@gray-98;
+      &:before {
+        content: '@{gray-98}';
+        color:@black;
+      }
+    }
   }
 
   .wba-font-primary,.wba-font-serif,.wba-font-monospace {
