--- a/data/styles/base/variables.less
+++ b/data/styles/base/variables.less
@@ -7,18 +7,51 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-@gray-base:              #000;
-@gray-darker:            lighten(@gray-base, 13.5%); // #222
-@gray-dark:              lighten(@gray-base, 20%);   // #333
-@gray:                   lighten(@gray-base, 33.5%); // #555
-@gray-light:             lighten(@gray-base, 46.7%); // #777
-@gray-lighter:           lighten(@gray-base, 93.5%); // #eee
+@blue-normal:           #005eb7;
+@blue-active:           #0072dd;
+@blue-hover:            #2790f3;
+@blue-disabled:         #c9daea;
+@blue-selected:         #f2f9ff;
 
-@brand-primary:         #337ab7;//darken(#428bca, 6.5%);
-@brand-success:         #5cb85c;
-@brand-info:            #55acee;
-@brand-warning:         #f4b350;
-@brand-danger:          #d9534f;
+@green-normal:          #38833a;
+@green-active:          #439f45;
+@green-hover:           #52bf54;
+@green-disabled:        #bde6bd;
+@green-new-item:        #eafceb;
+
+@red-normal:            #e1302b;
+@red-active:            #e94844;
+@red-hover:             #f35c58;
+@red-disabled:          #f1c8c6;
+@red-error-bg:          #fff0ef;
+
+@yellow-normal:         #f4b350;
+
+@black:                 #000;
+@gray-13:               #222;
+@gray-20:               #333;
+@gray-33:               #555;
+@gray-46:               #777;
+@gray-76:               #c3c3c3;
+@gray-80:               #ccc;
+@gray-87:               #dedede;
+@gray-93:               #eee;
+@gray-96:               #f6f6f6;
+@gray-98:               #fafafa;
+@white:                 #fff;
+
+@gray-base:             @black;         // #000
+@gray-darker:           @gray-13;       // #222
+@gray-dark:             @gray-20;       // #333
+@gray:                  @gray-33;       // #555
+@gray-light:            @gray-46;       // #777
+@gray-lighter:          @gray-93;       // #eee
+
+@brand-primary:         @blue-normal;   // #005eb7
+@brand-success:         @green-normal;  // #38833a
+@brand-info:            @blue-hover;    // #2790f3
+@brand-warning:         @yellow-normal; // #f4b350
+@brand-danger:          @red-normal;    // #e1302b
 
 
 //== Scaffolding
