Feature(Buttons): Update the buttons using the new design

--- a/data/styles/base/buttons.less
+++ b/data/styles/base/buttons.less
@@ -64,26 +64,18 @@
 // --------------------------------------------------
 
 .btn-default {
-  .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
+  .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border; @btn-default-bg-hover; @btn-default-border-hover; @btn-default-bg-active; @btn-default-border-active; @btn-default-color-disabled; @btn-default-bg-disabled; @btn-default-border-disabled);
 }
 .btn-primary {
-  .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border);
+  .button-variant(@btn-primary-color; @btn-primary-bg; @btn-primary-border; @btn-primary-bg-hover; @btn-primary-border-hover; @btn-primary-bg-active; @btn-primary-border-active; @btn-primary-color-disabled; @btn-primary-bg-disabled; @btn-primary-border-disabled);
 }
 // Success appears as green
 .btn-success {
-  .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border);
-}
-// Info appears as blue-green
-.btn-info {
-  .button-variant(@btn-info-color; @btn-info-bg; @btn-info-border);
-}
-// Warning appears as orange
-.btn-warning {
-  .button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border);
+  .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border; @btn-success-bg-hover; @btn-success-border-hover; @btn-success-bg-active; @btn-success-border-active; @btn-success-color-disabled; @btn-success-bg-disabled; @btn-success-border-disabled);
 }
 // Danger and error appear as red
 .btn-danger {
-  .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border);
+  .button-variant(@btn-danger-color; @btn-danger-bg; @btn-danger-border; @btn-danger-bg-hover; @btn-danger-border-hover; @btn-danger-bg-active; @btn-danger-border-active; @btn-danger-color-disabled; @btn-danger-bg-disabled; @btn-danger-border-disabled);
 }
 
 
