--- a/data/styles/base/dark/variables_dark.less
+++ b/data/styles/base/dark/variables_dark.less
@@ -176,38 +176,58 @@
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
-@btn-font-weight:                normal;
+@btn-font-weight:               normal;
 
-@btn-default-color:              @gray-lighter;
-@btn-default-bg:                 @body-bg-alt;
-@btn-default-border:             darken(@body-bg-alt, 5%);
+@btn-default-color:             @black;
+@btn-default-bg:                @white;
+@btn-default-border:            @gray-80;
+@btn-default-bg-hover:          @gray-93;
+@btn-default-border-hover:      @gray-80;
+@btn-default-bg-active:         @gray-93;
+@btn-default-border-active:     @gray-80;
+@btn-default-color-disabled:    @gray-80;
+@btn-default-bg-disabled:       @gray-93;
+@btn-default-border-disabled:   @gray-80;
 
-@btn-primary-color:              #fff;
-@btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             @brand-primary;//darken(@btn-primary-bg, 5%);
+@btn-primary-color:             @white;
+@btn-primary-bg:                @brand-primary;
+@btn-primary-border:            @brand-primary;//darken(@btn-primary-bg, 5%);
+@btn-primary-bg-hover:          @blue-hover;
+@btn-primary-border-hover:      @blue-hover;
+@btn-primary-bg-active:         @blue-active;
+@btn-primary-border-active:     @blue-active;
+@btn-primary-color-disabled:    @white;
+@btn-primary-bg-disabled:       @blue-disabled;
+@btn-primary-border-disabled:   @blue-disabled;
 
-@btn-success-color:              #fff;
-@btn-success-bg:                 @brand-success;
-@btn-success-border:             @brand-success;//darken(@btn-success-bg, 5%);
+@btn-success-color:             @white;
+@btn-success-bg:                @brand-success;
+@btn-success-border:            @brand-success;//darken(@btn-success-bg, 5%);
+@btn-success-bg-hover:          @green-hover;
+@btn-success-border-hover:      @green-hover;
+@btn-success-bg-active:         @green-active;
+@btn-success-border-active:     @green-active;
+@btn-success-color-disabled:    @white;
+@btn-success-bg-disabled:       @green-disabled;
+@btn-success-border-disabled:   @green-disabled;
 
-@btn-info-color:                 #fff;
-@btn-info-bg:                    @brand-info;
-@btn-info-border:                @brand-info;//darken(@btn-info-bg, 5%);
+@btn-danger-color:              @white;
+@btn-danger-bg:                 @brand-danger;
+@btn-danger-border:             @brand-danger;//darken(@btn-danger-bg, 5%);
+@btn-danger-bg-hover:           @red-hover;
+@btn-danger-border-hover:       @red-hover;
+@btn-danger-bg-active:          @red-active;
+@btn-danger-border-active:      @red-active;
+@btn-danger-color-disabled:     @white;
+@btn-danger-bg-disabled:        @red-disabled;
+@btn-danger-border-disabled:    @red-disabled;
 
-@btn-warning-color:              #fff;
-@btn-warning-bg:                 @brand-warning;
-@btn-warning-border:             @brand-warning;//darken(@btn-warning-bg, 5%);
-
-@btn-danger-color:               #fff;
-@btn-danger-bg:                  @brand-danger;
-@btn-danger-border:              @brand-danger;//darken(@btn-danger-bg, 5%);
-
-@btn-link-disabled-color:        @gray-light;
+@btn-link-disabled-color:       @gray-light;
 
 // Allows for customizing button radius independently from global border radius
-@btn-border-radius-base:         @border-radius-small;
-@btn-border-radius-large:        @border-radius-small;
-@btn-border-radius-small:        @border-radius-small;
+@btn-border-radius-base:        @border-radius-small;
+@btn-border-radius-large:       @border-radius-small;
+@btn-border-radius-small:       @border-radius-small;
 
 
 //== Forms
