Feature(Layout): Update colors and dimensions to radio, checkbox and switch buttons

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -82,12 +82,14 @@
 
 ///* FLIP SWITCH */
 
-@flip-switch-width:             42px;
+@flip-switch-width:             56px;
 @flip-switch-height:            26px;
 @flip-switch-internal-padding:  3px;
-@flip-switch-color-off:         #e4e4e4;
+@flip-switch-color-off:         #eeeeee;
 @flip-switch-transition:        .15s ease-out;
 @switchTransition:              .15s ease-out;
+@flip-switch-checked-border:    #005eb7;
+@flip-switch-unchecked-border:  #cccccc;
 
 ///* WIDGETS */
 
