--- a/data/styles/base/dark/custom_variables_dark.less
+++ b/data/styles/base/dark/custom_variables_dark.less
@@ -88,6 +88,8 @@
 @flip-switch-color-off:         #e4e4e4;
 @flip-switch-transition:        .15s ease-out;
 @switchTransition:              .15s ease-out;
+@flip-switch-checked-border:    #005eb7;
+@flip-switch-unchecked-border:  #cccccc;
 
 ///* WIDGETS */
 
