--- a/data/styles/base/custom/mod_flipswitches.less
+++ b/data/styles/base/custom/mod_flipswitches.less
@@ -29,13 +29,14 @@
   text-transform: uppercase;
   background: @flip-switch-color-off;
   border-radius: inherit;
-  box-shadow: inset 0 1px 2px rgba(0,0,0, .12), inset 0 0 2px rgba(0,0,0, .15);
+  box-shadow: none;
+  border:1px solid @flip-switch-unchecked-border;
   .transition(@flip-switch-transition);
   .transition-property(opacity background);
 
   .switch-input:checked ~ & {
     background: #47a8d8;
-    box-shadow: inset 0 1px 2px rgba(0,0,0, .15), inset 0 0 3px rgba(0,0,0, .2);
+    box-shadow: none;
     &:before { opacity: 0; }
     &:after { opacity: 1; }
   }
@@ -49,21 +50,20 @@
   height: 18px;
   background: white;
   border-radius: 10px;
-  box-shadow: 1px 1px 5px rgba(0,0,0, .2);
+  box-shadow: 4px 0 8px rgba(0,0,0,.1);
   //.linear-gradient(top, white 40%, #f0f0f0);
   .transition(left @flip-switch-transition);
 
   .switch-input:checked ~ & {
-    left: 20px;
-    box-shadow: -1px 1px 5px rgba(0,0,0, .2);
+    left: 34px;
+    box-shadow: -4px 0 8px rgba(0,0,0,.2);
   }
 }
 
-.switch-primary > .switch-input:checked ~ .switch-label { background: @brand-primary; }
-.switch-info > .switch-input:checked ~ .switch-label { background: @brand-info; }
-.switch-success > .switch-input:checked ~ .switch-label { background: @brand-success; }
-.switch-warning > .switch-input:checked ~ .switch-label { background: @brand-warning; }
-.switch-danger > .switch-input:checked ~ .switch-label { background: @brand-danger; }
+.switch > .switch-input:checked ~ .switch-label {
+  background: @brand-info;
+  border: 1px solid @flip-switch-checked-border;
+}
 
 .input-group-addon {
     > .switch {
