Feature(Layout): Update colors and dimensions for input type range

--- a/data/styles/base/dark/custom_variables_dark.less
+++ b/data/styles/base/dark/custom_variables_dark.less
@@ -58,19 +58,24 @@
 ///* FORM ELEMENTS */
 
 @track-color:                 #eee;
+@track-disabled-color:        #eee;
 @thumb-color:                 #fff;
 
 @thumb-radius:                100%;
-@thumb-height:                20px;
-@thumb-width:                 20px;
+@thumb-height:                22px;
+@thumb-width:                 22px;
+@thumb-moz-height:            20px;
+@thumb-moz-width:             20px;
 @thumb-shadow-size:           1px;
 @thumb-shadow-blur:           4px;
 @thumb-shadow-color:          rgba(0,0,0,.2);
 @thumb-border-width:          1px;
 @thumb-border-color:          white;
+@thumb-disabled-border-color: #ccc;
 
 @track-width:                 100%;
 @track-height:                10px;
+@track-moz-height:            8px;
 @track-shadow-size:           0;
 @track-shadow-blur:           0;
 @track-shadow-color:          #222;
