--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -14,7 +14,7 @@
 @sidebar-cell-height:                   53px;
 @sidebar-min-width:                     @sidebar-cell-height;
 @sidebar-border-width:                  1px;
-@sidebar-outer-border-color:            darken(@sidebar-first-level-bg,6%);
+@sidebar-outer-border-color:            #ccc;
 @sidebar-shadow:                        0px 0px 4px 0px rgba(0,0,0,.2);
 
 @sidebar-fontfamily:                    "Open_sans", Helvetica, Arial, sans-serif;
@@ -23,11 +23,7 @@
 @sidebar-fontweight-second-level:       400;
 @sidebar-fontweight-third-level:        400;
 
-@sidebar-fontsize-first-level:          (@font-size-base + 1);
-@sidebar-fontsize-second-level:         @font-size-base;
-@sidebar-fontsize-third-level:          (@font-size-base - 1);
-
-@sidebar-fontsize:                      @font-size-base;
+@sidebar-fontsize:                      (@font-size-base - 1);
 
 @sidebar-lineheight:                    @line-height-computed;
 @sidebar-iconsize:                      18px;
