--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -14,7 +14,7 @@
 @sidebar-cell-height:                   53px;
 @sidebar-min-width:                     @sidebar-cell-height;
 @sidebar-border-width:                  1px;
-@sidebar-outer-border-color:            #ccc;
+@sidebar-outer-border-color:            @gray-80;
 @sidebar-shadow:                        0px 0px 4px 0px rgba(0,0,0,.2);
 
 @sidebar-fontfamily:                    "Open_sans", Helvetica, Arial, sans-serif;
