BugFix(Sidebar): Menu collapsed issue

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -28,7 +28,7 @@
 @sidebar-lineheight:                    @line-height-computed;
 @sidebar-iconsize:                      18px;
 
-@sidebar-cell-font-color:               #333;
+@sidebar-cell-font-color:               @black;
 @sidebar-cell-font-color-hover:         @brand-primary;
 
 @sidebar-first-level-bg:                #fff;
@@ -43,7 +43,7 @@
 @sidebar-submenu-hover-cell-bg:         @gray-lighter;
 
 @sidebar-tooltip-preview-bg:            #fff;
-@sidebar-tooltip-preview-text-color:    @gray-base;
+@sidebar-tooltip-preview-text-color:    @black;
 
 ///* FOOTER */
 
