--- a/data/styles/base/dark/custom_variables_dark.less
+++ b/data/styles/base/dark/custom_variables_dark.less
@@ -28,7 +28,7 @@
 @sidebar-lineheight:                    @line-height-computed;
 @sidebar-iconsize:                      18px;
 
-@sidebar-cell-font-color:               @gray-lighter;
+@sidebar-cell-font-color:               @black;
 @sidebar-cell-font-color-hover:         @brand-primary;
 
 @sidebar-first-level-bg:                @body-bg-alt;
@@ -43,7 +43,7 @@
 @sidebar-submenu-hover-cell-bg:         @gray-lighter;
 
 @sidebar-tooltip-preview-bg:            #333;
-@sidebar-tooltip-preview-text-color:    #fff;
+@sidebar-tooltip-preview-text-color:    @white;
 
 ///* FOOTER */
 
