Feature(Layout): Changed jqGrid pagination to new layout

--- a/data/plugins/jqgrid/less/base/jqgrid.base.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.base.less
@@ -7,12 +7,15 @@
 @jqgrid-caption-bg: #f1f1f1;
 
 @jqgrid-sort-icons-width: 10px;
+@width-buttons: 34px;
+@height-buttons: 34px;
 
 /*Grid*/
 .ui-jqgrid {
   position: relative;
   .box-shadow(0px 0px 0px 1px darken(@jqgrid-border-color, 2%));
   border-radius: @jqgrid-border-radius;
+  color:@black;
   .ui-jqgrid-view {
     position: relative;
     top: 0;
