--- a/data/plugins/jqgrid/less/base/jqgrid.pager.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.pager.less
@@ -1,7 +1,7 @@
 /* Pager*/
 .ui-jqgrid {
-  .ui-pager-table>tbody>tr>td{
-      border: none;
+  .ui-pager-table > tbody > tr > td {
+    border: none;
   }
   .ui-jqgrid-pager,
   .ui-jqgrid-toppager {
@@ -18,116 +18,184 @@
     }
   }
   .ui-jqgrid-toppager {
-    border-top-width :0;
-    border-bottom : 1px solid #ddd;
+    border-top-width: 0;
+    border-bottom: 1px solid #ddd;
   }
   .ui-pg-table {
     position: relative;
-    padding: 1px 0;
-    width:auto;
-    margin: 0;
+    padding: 0;
+    width: auto;
+    margin: 2px 0;
     td {
-      font-weight:normal;
-      vertical-align:middle;
+      font-weight: normal;
+      vertical-align: middle;
+    }
+    td[align="center"] {
+      width: 100% !important;
     }
   }
-  .ui-pager-control .ui-pager-table td {
-    min-height : 20px !important;
+  .ui-pager-control {
+    .ui-pager-table td {
+      min-height: 20px !important;
+    }
+    .ui-pg-selbox-container {
+      padding: 8px 10px;
+      position: relative;
+      right: 0;
+      text-align: center;
+      top: 0;
+    }
+    select.ui-pg-selbox {
+      border: 1px solid #cccccc;
+      height: @height-buttons;
+      padding: 0 10px;
+    }
   }
-  .ui-pg-button  {
-    height:auto;
-    margin:0 3px;
+  .ui-pg-button {
+    height: auto;
+    margin: 0;
   }
-  .ui-paging-pager td {}
+  .ui-paging-pager {
+    td.btn {
+      border-radius: 2px 0 0 2px;
+      font-size: 25px;
+      height: @height-buttons;
+      line-height: 1;
+      margin: 0;
+      padding: 3px 0;
+      text-align: center;
+      width: @width-buttons;
+      &:active {
+        box-shadow: none;
+      }
+    }
+    td.btn.active {
+      box-shadow: none;
+    }
+    td.btn + td.btn {
+      border-radius: 0 2px 2px 0;
+      margin: 0 0 0 -1px;
+    }
+    .ui-pg-input {
+      height: @height-buttons;
+      width: @width-buttons;
+    }
+    td.ui-disabled {
+      &:not([id]) {
+        display: none;
+      }
+    }
+    td[dir] {
+      padding: 0 10px;
+    }
+    td[dir] ~ td[dir] {
+      padding: 0;
+    }
+  }
   .ui-pg-button {
     span {
       display: block;
     }
-    &:hover {}
+    &:hover {
+    }
   }
-  .ui-disabled:hover {}
+  .ui-disabled:hover {
+  }
   .ui-pg-input,
   .ui-jqgrid-toppager .ui-pg-input,
   .ui-pg-selbox,
   .ui-jqgrid-toppager .ui-pg-selbox {
     display: inline-block;
-    height:auto;
+    height: auto;
     width: auto;
-    margin:0 10px;
+    margin: 0 10px;
     padding: 0px 3px;
     text-align: center;
   }
   .ui-pg-selbox,
   .ui-jqgrid-toppager .ui-pg-selbox {
-    border:none;
+    border: none;
   }
   .ui-separator {
     height: 18px;
-    border : none;
-    border-left: 2px solid #ccc ; /*default*/
+    border: none;
+    border-left: 2px solid #ccc; /*default*/
     margin: 0 17px;
   }
   .ui-separator-li {
     height: 2px;
-    border : none;
-    border-top: 2px solid #ccc ;  /*default*/
-    margin: 0; padding: 0; width:100%
+    border: none;
+    border-top: 2px solid #ccc; /*default*/
+    margin: 0;
+    padding: 0;
+    width: 100%
+  }
+
+  @media screen and (min-width: 1024px) {
+    .ui-pager-control .ui-pg-selbox-container {
+      position: absolute;
+      right: 0;
+      top: 2px;
+    }
   }
 }
 
-  .ui-jqgrid .ui-jqgrid-pager .ui-pg-div,
-  .ui-jqgrid .ui-jqgrid-toppager .ui-pg-div
-  {
-    float:left;
-    position:relative;
-  }
-  .ui-jqgrid .ui-jqgrid-pager .ui-pg-button,
-  .ui-jqgrid .ui-jqgrid-toppager .ui-pg-button
-  {
-    cursor:pointer;
-  }
-  .ui-jqgrid .ui-jqgrid-pager .ui-pg-div  span,
-  .ui-jqgrid .ui-jqgrid-toppager .ui-pg-div  span
-  {
-    float:left;
-  }
-  .ui-jqgrid td input,
-  .ui-jqgrid td select,
-  .ui-jqgrid td textarea {  }
-  .ui-jqgrid td textarea {
-    width:auto;
-    height:auto;
-  }
-  .ui-jqgrid .ui-jqgrid-pager .ui-pager-table,
-  .ui-jqgrid .ui-jqgrid-toppager .ui-pager-table
-  {
-    width:100%;
-    table-layout:fixed;
-    height:100%;
-  }
-  .ui-jqgrid .ui-jqgrid-pager .ui-paging-info,
-  .ui-jqgrid .ui-jqgrid-toppager .ui-paging-info
-  {
-    font-weight: normal;
-    height:auto;
-    margin-right:20px;
-    display: inline;
-  }
-  .ui-jqgrid .ui-jqgrid-pager .ui-paging-pager,
-  .ui-jqgrid .ui-jqgrid-toppager .ui-paging-pager
-  {
-    table-layout:auto;
-    height:100%;
-  }
-  .ui-jqgrid .ui-jqgrid-pager .navtable,
-  .ui-jqgrid .ui-jqgrid-toppager .navtable
-  {
-    float:left;
-    table-layout:auto;
-    height:100%;
-  }
-  .ui-jqgrid .ui-jqgrid-pager .navtable td,
-  .ui-jqgrid .ui-jqgrid-toppager .navtable td
-  {
-    padding : 0 5px;
-  }
+.ui-jqgrid .ui-jqgrid-pager .ui-pg-div,
+.ui-jqgrid .ui-jqgrid-toppager .ui-pg-div {
+  float: left;
+  position: relative;
+}
+
+.ui-jqgrid .ui-jqgrid-pager .ui-pg-button,
+.ui-jqgrid .ui-jqgrid-toppager .ui-pg-button {
+  cursor: pointer;
+}
+
+.ui-jqgrid .ui-jqgrid-pager .ui-pg-div span,
+.ui-jqgrid .ui-jqgrid-toppager .ui-pg-div span {
+  float: left;
+}
+
+.ui-jqgrid td input,
+.ui-jqgrid td select,
+.ui-jqgrid td textarea {
+}
+
+.ui-jqgrid td textarea {
+  width: auto;
+  height: auto;
+}
+
+.ui-jqgrid .ui-jqgrid-pager .ui-pager-table,
+.ui-jqgrid .ui-jqgrid-toppager .ui-pager-table {
+  width: 100%;
+  table-layout: fixed;
+  height: 100%;
+}
+
+.ui-jqgrid .ui-jqgrid-pager .ui-paging-info,
+.ui-jqgrid .ui-jqgrid-toppager .ui-paging-info {
+  font-weight: normal;
+  height: auto;
+  margin-right: 20px;
+  display: inline;
+}
+
+.ui-jqgrid .ui-jqgrid-pager .ui-paging-pager,
+.ui-jqgrid .ui-jqgrid-toppager .ui-paging-pager {
+  table-layout: auto;
+  height: 100%;
+}
+
+.ui-jqgrid .ui-jqgrid-pager .navtable,
+.ui-jqgrid .ui-jqgrid-toppager .navtable {
+  float: left;
+  table-layout: auto;
+  height: 100%;
+}
+
+.ui-jqgrid .ui-jqgrid-pager .navtable td,
+.ui-jqgrid .ui-jqgrid-toppager .navtable td {
+  padding: 0 5px;
+}
+
