Feature(Layout): Update the top navbar component using the new design

--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -86,10 +86,6 @@ i {
   text-align: normal;
 }
 
-.dropdown-menu {
-  padding:4px;
-}
-
 [data-notify="container"] {
   .box-shadow(0 3px 7px -2px rgba(0,0,0,.5));
 }
@@ -111,7 +107,18 @@ i {
   text-overflow: ellipsis;
 }
 
+.show-panel-example {
+  .navbar {
+    .container-fluid {
+      padding-right: 0;
+    }
+  }
+}
 
+.flag-icon {
+  width: 20px;
+  height: 15px;
+}
 
 .dt-editable-text {
     position:relative;
