--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -374,7 +374,6 @@
   background-color: darken(@brand-danger,5%);
   background-image: -webkit-gradient(linear, center top, center bottom, from(@brand-danger), to(darken(@brand-danger,5%)));
   background-image: -webkit-linear-gradient(@brand-danger, darken(@brand-danger,5%));
-  box-shadow: 0 0 20px -3px fade(@brand-danger, 80%);
   color: #fff;
   margin: 0 10px;
   vertical-align: middle;
@@ -402,8 +401,8 @@
   padding: 0;
   margin: 0;
   border-radius: 100%;
-  width: 38px;
-  height: 38px;
+  width: 41px;
+  height: 41px;
   overflow: hidden;
   box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,.2);
   border: 2px solid #f8f8f8;
@@ -421,7 +420,8 @@
 ///* CARET FOR DROPDOWN MENU */
 ///* START */
 .dropdown-menu {
-  box-shadow: 0px 3px 5px -1px rgba(0,0,0,.15);
+  box-shadow: none;
+
   &.dropdown-caret {
     &:before, &:after {
       content: "";
@@ -447,15 +447,10 @@
   }
   ///* CUSTOM HEADER FOR DROPDOWNS */
   .dm-header {
-    text-align: center;
-    padding: 6px 10px 8px;
-    line-height:@line-height-computed;
-    font-size:@font-size-small;
-    text-transform: uppercase;
-    border-bottom: 2px solid @brand-primary;
+    line-height: @line-height-computed;
+    font-size: @font-size-base;
     font-weight: 700;
     color: @dropdown-link-color;
-    margin-bottom: 10px;
   }
 }
 ///* END */
