--- a/data/styles/base/dark/variables_dark.less
+++ b/data/styles/base/dark/variables_dark.less
@@ -420,7 +420,7 @@
 
 @navbar-default-color:             @text-color;
 @navbar-default-bg:                @body-bg-alt; //#f8f8f8;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-border:            @gray-80;
 
 // Navbar links
 @navbar-default-link-color:                @gray-lighter;
@@ -473,7 +473,7 @@
 //##
 
 //=== Shared nav styles
-@nav-link-padding:                          8px 15px;
+@nav-link-padding:                          8px 10px;
 @nav-link-hover-bg:                         @gray-lighter;
 
 @nav-disabled-link-color:                   @gray-light;
