--- a/data/styles/base/variables.less
+++ b/data/styles/base/variables.less
@@ -418,17 +418,17 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #777;
-@navbar-default-bg:                #fff; //#f8f8f8;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-color:             @black;
+@navbar-default-bg:                @white; //#f8f8f8;
+@navbar-default-border:            @gray-80;
 
 // Navbar links
-@navbar-default-link-color:                #777;
-@navbar-default-link-hover-color:          #333;
-@navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #555;
-@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
-@navbar-default-link-disabled-color:       #ccc;
+@navbar-default-link-color:                @black;
+@navbar-default-link-hover-color:          @black;
+@navbar-default-link-hover-bg:             @gray-93;
+@navbar-default-link-active-color:         @black;
+@navbar-default-link-active-bg:            @gray-93;
+@navbar-default-link-disabled-color:       @gray-80;
 @navbar-default-link-disabled-bg:          transparent;
 
 // Navbar brand label
@@ -473,7 +473,7 @@
 //##
 
 //=== Shared nav styles
-@nav-link-padding:                          8px 15px;
+@nav-link-padding:                          8px 10px;
 @nav-link-hover-bg:                         @gray-lighter;
 
 @nav-disabled-link-color:                   @gray-light;
