Feature(Layout): Update the top navbar component using the new design

--- a/data/styles/base/custom/mod_navbar.less
+++ b/data/styles/base/custom/mod_navbar.less
@@ -30,6 +30,18 @@
       padding-left:0;
     }
   }
+  .nav-search {
+    input[type="text"] {
+      box-shadow: none;
+      border-right: none;
+    }
+    .form-control:focus {
+      border-color: @gray-80;
+    }
+    button {
+      border-left: none;
+    }
+  }
   .dd-language {
     font-weight: 600;
   }
