Feature(Layout): Update the top navbar component using the new design

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -420,6 +420,7 @@
 ///* CARET FOR DROPDOWN MENU */
 ///* START */
 .dropdown-menu {
+  min-width: 50px;
   box-shadow: none;
 
   &.dropdown-caret {
