--- a/data/styles/base/custom/mod_navbar.less
+++ b/data/styles/base/custom/mod_navbar.less
@@ -80,6 +80,7 @@
     .dm-header {
       padding: 6px 10px;
       border-top: none;
+      white-space: nowrap;
     }
     .dm-header:hover {
       background: none;
@@ -93,6 +94,9 @@
         display: block;
         padding: 6px 10px 6px 30px;
       }
+    }
+    label {
+      white-space: nowrap;
     }
     .nav-icon-sm,.nav-icon-md,.nav-icon-lg {
         margin-left: 0;
