Feature(Layout): Update the top navbar component using the new design

--- a/data/styles/base/custom/mod_navbar.less
+++ b/data/styles/base/custom/mod_navbar.less
@@ -49,8 +49,13 @@
   }
   .dropdown {
     a {
-      .fa {
+      > .fa {
         font-size: 20px;
+        vertical-align: middle;
+
+        &.nav-icon-lg {
+          font-size: 18px;
+        }
       }
     }
 
