--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -398,7 +398,7 @@
   line-height:inherit;
   vertical-align:middle;
   padding: 0;
-  margin: 0;
+  margin: 0 10px 0 0;
   border-radius: 100%;
   width: 41px;
   height: 41px;
