Feature(Layout): Update the top navbar component using the new design

--- a/data/styles/base/custom/mod_navbar.less
+++ b/data/styles/base/custom/mod_navbar.less
@@ -61,7 +61,7 @@
     a {
       > .fa {
         font-size: 20px;
-        vertical-align: middle;
+        vertical-align: bottom;
 
         &.nav-icon-lg {
           font-size: 18px;
