--- a/data/plugins/jqgrid/less/base/jqgrid.base.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.base.less
@@ -1,6 +1,7 @@
-@jqgrid-border-color: #ddd;
-@jqgrid-border-radius: 3px;
-@jqgrid-th-bg-color: #fff;
+@jqgrid-border-color: #c3c3c3;
+@jqgrid-border-radius: 0;
+@jqgrid-th-bg-color: #eee;
+@jqgrid-selected-rows-color: #f2f9ff;
 
 @jqgrid-caption-padding-vertical: 10px;
 @jqgrid-caption-padding-horizontal: 15px;
@@ -338,6 +339,73 @@ div.tablediv > .table-bordered {
     }
     &.footrow-rtl td {
       text-align:right;
+    }
+  }
+}
+
+.ui-jqgrid {
+  .table-bordered > thead > tr > th {
+    border: 1px solid @jqgrid-border-color;
+    border-bottom: 0;
+  }
+  .table-bordered > tbody > tr > td {
+    border-bottom: 1px solid @jqgrid-border-color;
+    border-right: 1px solid @jqgrid-border-color;
+  }
+  .table > tbody > tr.success > td {
+    background: @jqgrid-selected-rows-color;
+  }
+  .table > tbody > tr.active.success > td {
+    background-color: @jqgrid-selected-rows-color;
+  }
+  tr.jqgrow {
+    &:nth-of-type(odd) {
+      td {
+        background-color: #fafafa;
+      }
+      :hover {
+        td {
+          background-color: @jqgrid-selected-rows-color;
+        }
+      }
+    }
+    &:hover {
+      td {
+        background-color: @jqgrid-selected-rows-color;
+      }
+    }
+  }
+  .table {
+    tr {
+      th {
+        padding-left: 10px;
+      }
+      td {
+        padding-left: 10px;
+        span.fa {
+          margin-left: -2px;
+        }
+      }
+    }
+  }
+  .ui-jqgrid-htable {
+    border-bottom: 1px solid @jqgrid-border-color;
+    tr > th {
+      input[type="checkbox"] {
+        margin-left: 1px;
+      }
+    }
+  }
+  .ui-jqgrid-btable {
+    .jqgfirstrow {
+      td {
+        border: 0;
+      }
+    }
+    tr > td {
+      input[type="checkbox"] {
+        margin-left: 1px;
+      }
     }
   }
 }
