Feature(Layout): Modified jqGrid header and row colors

--- a/data/plugins/jqgrid/less/base/jqgrid.base.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.base.less
@@ -79,7 +79,7 @@
   .ui-jqgrid-hdiv {
     background: @jqgrid-th-bg-color;
     position: relative;
-    margin: 1px 0 0 0;
+    margin: 0;
     padding: 0;
     overflow: hidden;
     .clearfix();
@@ -347,6 +347,7 @@ div.tablediv > .table-bordered {
   .table-bordered > thead > tr > th {
     border: 1px solid @jqgrid-border-color;
     border-bottom: 0;
+    background: @jqgrid-th-bg-color;
   }
   .table-bordered > tbody > tr > td {
     border-bottom: 1px solid @jqgrid-border-color;
