--- a/data/plugins/jqgrid/less/base/jqgrid.pager.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.pager.less
@@ -6,7 +6,7 @@
   .ui-jqgrid-pager,
   .ui-jqgrid-toppager {
     border-left-width: 0px;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid @jqgrid-border-color;
     position: relative;
     white-space: nowrap;
     overflow: hidden;
