Feature(Layout): Modified jqGrid font-size

--- a/data/plugins/jqgrid/less/base/jqgrid.base.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.base.less
@@ -344,6 +344,7 @@ div.tablediv > .table-bordered {
 }
 
 .ui-jqgrid {
+  font-size: 13px;
   .table-bordered > thead > tr > th {
     border: 1px solid @jqgrid-border-color;
     border-bottom: 0;
@@ -379,12 +380,12 @@ div.tablediv > .table-bordered {
   .table {
     tr {
       th {
-        padding-left: 10px;
+        padding-left: 5px;
       }
       td {
-        padding-left: 10px;
+        padding-left: 5px;
         span.fa {
-          margin-left: -2px;
+          margin-left: 3px;
         }
       }
     }
@@ -393,7 +394,8 @@ div.tablediv > .table-bordered {
     border-bottom: 1px solid @jqgrid-border-color;
     tr > th {
       input[type="checkbox"] {
-        margin-left: 1px;
+        margin:0 0 0 5px;
+        display: block;
       }
     }
   }
@@ -405,7 +407,7 @@ div.tablediv > .table-bordered {
     }
     tr > td {
       input[type="checkbox"] {
-        margin-left: 1px;
+        margin-left: 5px;
       }
     }
   }
