--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -301,3 +301,25 @@ input[type="radio"] {
         margin-top: 2px!important;
     }
 }
+
+select.form-control {
+  padding-left: 5px;
+
+  option {
+    color: @input-color;
+    background-color: @input-bg;
+    padding: @padding-base-vertical @padding-base-horizontal;
+    border-top: 1px solid @input-border;
+  }
+  option:first-of-type {
+    border-top: none;
+  }
+  option:hover {
+    color: @black;
+    background: @gray-93;
+  }
+}
+
+.form-control[disabled] {
+  color: @gray-80;
+}
