--- a/data/styles/base/forms.less
+++ b/data/styles/base/forms.less
@@ -147,6 +147,7 @@ output {
   &[readonly],
   fieldset[disabled] & {
     background-color: @input-bg-disabled;
+    columns: @input-color-disabled;
     opacity: 1; // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655
   }
 
@@ -453,10 +454,11 @@ input[type="checkbox"] {
 // below a form control. Use for general help, formatting, or instructional text.
 
 .help-block {
+  color: @text-color;
   display: block; // account for any element using help-block
+  font-size: 12px;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: lighten(@text-color, 25%); // lighten the text some for contrast
 }
 
 
