--- a/data/styles/base/mixins/forms.less
+++ b/data/styles/base/mixins/forms.less
@@ -21,12 +21,9 @@
   .form-control {
     border-color: @border-color;
     color: @border-color;                           // Custom addition
-    background-color: lighten(@border-color, 50%);  // Custom addition
-    .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));  // Redeclare so transitions work
+    background-color: @background-color;  // Custom addition
     &:focus {
       border-color: darken(@border-color, 10%);
-      @shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten(@border-color, 20%);
-      .box-shadow(@shadow);
     }
   }
   // Set validation states also for addons
