--- a/data/styles/base/variables.less
+++ b/data/styles/base/variables.less
@@ -121,7 +121,7 @@
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
 @padding-base-vertical:     6px;
-@padding-base-horizontal:   12px;
+@padding-base-horizontal:   10px;
 
 @padding-large-vertical:    10px;
 @padding-large-horizontal:  16px;
@@ -234,12 +234,14 @@
 //##
 
 //** `<input>` background color
-@input-bg:                       #fefefe;
+@input-bg:                       @white;
 //** `<input disabled>` background color
-@input-bg-disabled:              @gray-lighter;
+@input-bg-disabled:              @gray-96;
 
 //** Text color for `<input>`s
-@input-color:                    @gray;
+@input-color:                     @black;
+//** Text color for `<input disabled>`s
+@input-color-disabled:            @gray-76;
 //** `<input>` border color
 @input-border:                   #ccc;
 
@@ -253,10 +255,10 @@
 @input-border-radius-small:      @border-radius-small;
 
 //** Border color for inputs on focus
-@input-border-focus:             #66afe9;
+@input-border-focus:             @blue-hover;
 
 //** Placeholder text color
-@input-color-placeholder:        #999;
+@input-color-placeholder:        @gray-76;
 
 //** Default `.form-control` height
 @input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
@@ -549,21 +551,21 @@
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-@state-success-text:             #3c763d;
-@state-success-bg:               lighten(@brand-success,30%);//#dff0d8;
-@state-success-border:           darken(spin(@state-success-bg, -10), 5%);
+@state-success-text:             @green-normal;
+@state-success-bg:               @green-new-item;
+@state-success-border:           @green-normal;
 
-@state-info-text:                #31708f;
-@state-info-bg:                  lighten(@brand-info,30%);//#d9edf7;
-@state-info-border:              darken(spin(@state-info-bg, -10), 7%);
+@state-info-text:                @blue-normal;
+@state-info-bg:                  @blue-selected;
+@state-info-border:              @blue-normal;
 
-@state-warning-text:             #8a6d3b;
-@state-warning-bg:               lighten(@brand-warning,30%);//#fcf8e3;
-@state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
+@state-warning-text:             @yellow-normal;
+@state-warning-bg:               lighten(@yellow-normal,30%);
+@state-warning-border:           @yellow-normal;
 
-@state-danger-text:              #a94442;
-@state-danger-bg:                lighten(@brand-danger,30%);//#f2dede;
-@state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
+@state-danger-text:              @red-normal;
+@state-danger-bg:                @red-error-bg;
+@state-danger-border:            @red-normal;
 
 
 //== Tooltips
