Feature(Layout): Update style for modal component

--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -70,7 +70,7 @@ i {
   padding-right:50px;
   position:relative;
   .close {
-    margin: @modal-title-padding;
+    margin: @modal-title-top-bottom-padding @modal-title-left-right-padding;
     padding: 2px;
     position: absolute;
     top:0;
@@ -82,7 +82,7 @@ i {
 }
 .modal-footer {
   padding: @modal-footer-padding;
-  background-color: @modal-footer-bg;
+  //background-color: @modal-footer-bg;
   text-align: normal;
 }
 
