--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -105,6 +105,6 @@
 
 ///* MODALS */
 
-@modal-footer-padding:        10px 15px;
+@modal-footer-padding:        10px;
 @modal-footer-bg:             15px;
 @modal-footer-bg:             #fafafa;
