Feature(Layout): Update the input  style and drop-down style

--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -258,7 +258,11 @@ input[type="checkbox"] {
             background-color: #aaa;
             border: 1px solid #aaa;
         }    
-    } 
+    }
+
+  &:required {
+    box-shadow: none;
+  }
 }
 
 
